# lib-illy

./: .clang-format  CMakeLists.txt  Makefile  README.md  install.sh  main.cpp  meson.build
gtest/: CMakeLists.txt
gtest/tests/: gtest_main.cpp  illy_overload_test.cpp  illy_print_test.cpp  illy_scope_guard_test.cpp  illy_unique_ptr_test.cpp  utillyty_overload_test.cpp  utillyty_print_test.cpp  utillyty_unique_ptr_test.cpp
include/: illy.h  utillyty.h
include/illy/io/: README.md  print.h
include/illy/memory/: README.md  unique_ptr.h
include/illy/util/: README.md  overload.h  scope_guard.h
include/utillyty/: overload.h  unique_ptr.h
src/: utillyty.h
src/sample_module/: meson.build  sample_module.cpp
test/: catch2_sample_test.cpp  gtest_sample_test.cpp
